Added missing dates, made indentation consistent

--- a/Changes
+++ b/Changes
@@ -1,25 +1,27 @@
-Revision history for Perl extension Proc::Guard
+Revision history for Perl module Proc::Guard
 
-0.06
+0.06 2011-08-14
 
     - localize $? in destructor.
       (Thanks to gfx++, kazuho++)
 
-0.05
+0.05 2011-02-22
 
      - move live tests to xt/
 
-0.04
+0.04 2010-11-30
 
     - callback function support
 
-0.03
+0.03 2010-07-18
 
-        - fixed deps
+    - fixed deps
 
-0.02
+0.02 2010-06-26
 
-        - fixed testing issue
+    - fixed testing issue
 
-0.01    Wed Jun 16 20:41:08 2010
-        - original version
+0.01 2010-06-17
+
+    - original version
+
